 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/05:
   * Fix locale being applied to the clock. (Simon)
     - Also fixed a likely locale-killer for BSDs (without nl_langinfo)
     ClockTool.hh/cc FbTk/FbString.cc
   * Fix nls digit strings to prefix with zero "%4d" => "%04d" for proper 
     spacing (Simon)
     Screen.cc nls/fluxbox-nls.hh nls/*/*.m
   * Fix loading of rotated fonts on style change (Simon)
     FbTk/... FontImp.hh XftFontImp.hh/cc XmbFontImp.hh/cc XFontImp.hh/cc
   * Change default Xft font to "monospace" (was "fixed") (Simon)
     - The "fixed" font loads a bitmap Xfont
     - Note that bitmap fonts do not rotate properly, and especially the 
       baseline isn't adjusted for the lack of rotation. Thus we recommend
       that if you are using a bitmapped font (e.g. artwiz), then specify it
       using xfld style (-*-snap-*-*-* ...etc) so that fluxbox loads it with 
       traditional XFont/XmbFont calls, resulting in correct placement and 
       rotation.
     FbTk/... Font.hh/cc XftFontImp.cc ThemeItems.cc
     FbWinFrameTheme.cc
*07/01/04:
   * Added new resource for init file to control default window decorations:
     session.screenN.defaultDeco: <bitmask>, where the bitmask corresponds
     to the one used for [Deco] in the apps file (Mark)
     Screen.cc/hh Window.cc/hh doc/asciidoc/fluxbox.txt
   * Move minimized windows to the back of the focused list (Mark)
     Window.cc FocusControl.cc/hh
*07/01/03:
   * Don't run [startup] items in apps file on fluxbox restart (Mark)
     Remember.cc fluxbox.cc
*07/01/02:
   * Replace `which' in fbsetbg and fbgm with `command -v' (Mark)
     util/fbsetbg fluxbox-generate_menu.in
   * Don't escape regular expression metacharacters in apps file, bug
     #1595497 (Mark)
     Remember.cc ClientPattern.cc
*07/01/01:
   * Happy New Year!
   * Don't draw style's menu icon pixmap underneath the program's icon (Mark)
     WinButton.cc